--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_chat_ui: ^1.6.4
   url_launcher: ^6.1.5
   lottie: ^1.4.2
+  walletconnect_dart: ^0.0.11
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/hometree.png
+    - assets/images/metamsk.png
+    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
