Added ipfs for feed and metamask wallet on hedera chian

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,7 @@ dependencies:
   flutter_chat_ui: ^1.6.4
   url_launcher: ^6.1.5
   lottie: ^1.4.2
-  walletconnect_dart: ^0.0.11
-
+  flutter_web3: ^2.1.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
