added hedera hashgraph based chat room and twillio authentication

--- a/node/package.json
+++ b/node/package.json
@@ -17,6 +17,10 @@
 		"express": "^4.18.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.5.3",
+		"open": "^7.0.0",
+		"text-encoding": "^0.7.0",
+		"inquirer": "^7.0.4",
+		"@hashgraph/sdk": "^2.0.30",
 		"morgan": "^1.10.0",
 		"node-fetch": "^3.2.6",
 		"random-name": "^0.1.2",
